# pydantic-ai-langfuse

./: .gitignore  .pre-commit-config.yaml  .tool-versions  Makefile  README.md  pyproject.toml  ruff.toml
src/pydantic_ai_langfuse/: __init__.py  models.py
