[tool.poetry]
name = "pydantic-ai-langfuse"
version = "0.1.0"
description = "Langfuse integration for pydantic-ai"
authors = ["Gabriele Ghisleni <gabriele.ghisleni@spaziodati.eu>"]
license = "Gabriele Ghisleni <gabriele.ghisleni01@gmail.com>"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
